# Dialogia

./: .gitignore  README.md
backend/: Dockerfile  app.py  pyproject.toml
backend/app/: api.py  diagloue.py  main.py
backend/models/: requests.py
backend/prompt/: prompt_service.py
backend/research/: prompt-eng-1.ipynb  prompt-eng-2.ipynb  research-requirements.txt
backend/tests/: test_prompt_service.py
dialogia-site/: package.json
dialogia-site/app/: page.tsx
dialogia-site/components/: LandingPage.css
frontend/: package.json
frontend/app/: index.css  page.tsx
frontend/components/: Dialogia.tsx  Header.tsx  LandingPage.css  LandingPage.tsx  Translator.tsx  dialogia.tsx
frontend/components/DialogueForm/: DialogueForm.tsx
frontend/components/Translator/: Translator.css  Translator.tsx
frontend/src/components/: Dialogia.tsx  LandingPage.css
frontend/src/components/DialogueForm/: DialogueForm.css
frontend/styles/: Header.module.css  Home.module.css  Translator.module.css  globals.css
infrastructure/: cdk.json  package-lock.json
