[tool.poetry]
name = "backend"
version = "0.1.0"
description = "The backend contains all the functionality of the app"
authors = ["trojrobert <trojrobert@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.23.6"
python-dotenv = "^1.0.1"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
